@@ -57,6 +57,9 @@
   border-top-right-radius: 2px;
   overflow: hidden;
 }
+.kwrapper *, .kfatalwrapper-outer * {
+  all: revert-layer;
+}
 .kwrapper div, .kwrapper span, .kwrapper em, .kwrapper ul, .kwrapper li, .kwrapper a, .kwrapper input, .kwrapper table, .kwrapper caption, .kwrapper tbody, .kwrapper tr, .kwrapper td, .kwrapper strong, .kwrapper hr, .kwrapper select, .kwrapper option, .kwrapper label, .kfatalwrapper-outer div, .kfatalwrapper-outer span, .kfatalwrapper-outer em, .kfatalwrapper-outer ul, .kfatalwrapper-outer li, .kfatalwrapper-outer a, .kfatalwrapper-outer input, .kfatalwrapper-outer table, .kfatalwrapper-outer caption, .kfatalwrapper-outer tbody, .kfatalwrapper-outer tr, .kfatalwrapper-outer td, .kfatalwrapper-outer strong, .kfatalwrapper-outer hr, .kfatalwrapper-outer select, .kfatalwrapper-outer option, .kfatalwrapper-outer label {
   padding: 0;
   margin: 0;
