@@ -32,6 +32,7 @@
   smokygrey skin, because the TYPO3 asset collector does not
   support them anymore.
 - Bugfix: Do not run out of memory when escaping very large strings.
+- Bugfix: Minimise the interference from the hosting CMS styles.
 
 5.0.9
 - Bugfix: Add the missing "kreXX Messages" to the translation.
